--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,9 +7,9 @@ on:
 
 jobs:
   build:
-    uses: esphome/workflows/.github/workflows/publish.yml@main
+    uses: djiesr/workflows/.github/workflows/publish.yml@main
     with:
       # CHANGEME: Set the filenames of your config files here:
-      files: project-template-esp32.yaml,project-template-esp8266.yaml
+      files: power-manager-8c-esp32-d1-mini.yaml,project-template-esp8266.yaml
       # CHANGEME: Set the name of your project here:
-      name: Template Project
+      name: Power-Manager
