--- a/power-manager-8c-esp32-d1-mini.yaml
+++ b/power-manager-8c-esp32-d1-mini.yaml
@@ -15,8 +15,8 @@ substitutions:
   # Modify variable based on your language
   adc_sensor: 'ADC Sensor'
   measured_current: 'Measured Current'
-  measured_power: 'Énergie mesurée'
-  measured_total_power_daily: 'Énergie Total/Jour'
+  measured_power: 'Measured Power'
+  measured_total_power_daily: 'Measured Total/Daily'
   
 
 esphome:
@@ -59,22 +59,6 @@ wifi:
 captive_portal:
 
 ##########################################################
-# Most projects should not remove anything from above here
-# and should just modify the name, project name/version 
-# and git url for the dashboard_import
-##########################################################
-
-
-# Sets up Bluetooth LE (Only on ESP32) to allow the user
-# to provision wifi credentials to the device.
-#esp32_improv:
-#  authorizer: none
-
-# Sets up the improv via serial client for Wi-Fi provisioning.
-# Handy if your device has a usb port for the user to add credentials when they first get it.
-#improv_serial:
-
-# My script
 
 web_server:
   port: 80
@@ -114,38 +98,59 @@ display:
     pages:
       - id: page1
         lambda: |-
-          it.printf(10, 10, id(font_times), "Power Manager");
-          it.printf(10, 25, id(font_times), "JLNTR2k4 2022.4");
-          it.printf(10, 45, id(font_times), "Main: %.1f kW", id(power_total).state);    
-#          it.printf(10, 45, id(font_times), "IP: %s", id(ip_now).state.c_str()); 
+          it.printf(10, 0, id(font_times), "Power Manager");
+          it.printf(10, 15, id(font_times), "JLNTR2k4 2022.4");
+          it.printf(10, 30, id(font_times), "Main: %.1f kW", id(power_total).state);    
+          it.printf(10, 45, id(font_times), "IP: %s", id(ip_now).state.c_str()); 
       - id: page2
-        lambda: |-
-          it.printf(10, 0, id(font_times), "Get A1: %.3f V", id(adc_sensor_a1).state);
-          it.printf(10, 15, id(font_times), "A1: %.2f Amp", id(measured_current_a1).state);
-          it.printf(10, 30, id(font_times), "Power %.3f kW", id(power_a1).state);
-          it.printf(10, 45, id(font_times), "Total %.3f kW", id(tde_a1).state);
-
-      - id: page3
         lambda: |-
           it.printf(10, 0, id(font_times), "Get A0: %.3f V", id(adc_sensor_a2).state);
           it.printf(10, 15, id(font_times), "A0: %.2f Amp", id(measured_current_a2).state);
           it.printf(10, 30, id(font_times), "Power %.3f kW", id(power_a2).state);
           it.printf(10, 45, id(font_times), "Total %.3f kW", id(tde_a2).state);
-
+      - id: page3
+        lambda: |-
+          it.printf(10, 0, id(font_times), "Get A1: %.3f V", id(adc_sensor_a1).state);
+          it.printf(10, 15, id(font_times), "A1: %.2f Amp", id(measured_current_a1).state);
+          it.printf(10, 30, id(font_times), "Power %.3f kW", id(power_a1).state);
+          it.printf(10, 45, id(font_times), "Total %.3f kW", id(tde_a1).state);
       - id: page4
         lambda: |-
-          it.printf(10, 0, id(font_times), "Get A7: %.3f V", id(adc_sensor_a5).state);
-          it.printf(10, 15, id(font_times), "A7: %.2f Amp", id(measured_current_a5).state);
+          it.printf(10, 0, id(font_times), "Get A2: %.3f V", id(adc_sensor_a2).state);
+          it.printf(10, 15, id(font_times), "A2: %.2f Amp", id(measured_current_a2).state);
+          it.printf(10, 30, id(font_times), "Power %.3f kW", id(power_a2).state);
+          it.printf(10, 45, id(font_times), "Total %.3f kW", id(tde_a2).state);
+      - id: page5
+        lambda: |-
+          it.printf(10, 0, id(font_times), "Get A3: %.3f V", id(adc_sensor_a3).state);
+          it.printf(10, 15, id(font_times), "A3: %.2f Amp", id(measured_current_a3).state);
+          it.printf(10, 30, id(font_times), "Power %.3f kW", id(power_a3).state);
+          it.printf(10, 45, id(font_times), "Total %.3f kW", id(tde_a3).state);
+      - id: page6
+        lambda: |-
+          it.printf(10, 0, id(font_times), "Get A4: %.3f V", id(adc_sensor_a4).state);
+          it.printf(10, 15, id(font_times), "A4: %.2f Amp", id(measured_current_a4).state);
+          it.printf(10, 30, id(font_times), "Power %.3f kW", id(power_a4).state);
+          it.printf(10, 45, id(font_times), "Total %.3f kW", id(tde_a4).state);
+      - id: page7
+        lambda: |-
+          it.printf(10, 0, id(font_times), "Get A5: %.3f V", id(adc_sensor_a5).state);
+          it.printf(10, 15, id(font_times), "A5: %.2f Amp", id(measured_current_a5).state);
           it.printf(10, 30, id(font_times), "Power %.3f kW", id(power_a5).state);
           it.printf(10, 45, id(font_times), "Total %.3f kW", id(tde_a5).state);
-
-      - id: page5
+      - id: page8
         lambda: |-
           it.printf(10, 0, id(font_times), "Get A6: %.3f V", id(adc_sensor_a6).state);
           it.printf(10, 15, id(font_times), "A6: %.2f Amp", id(measured_current_a6).state);
           it.printf(10, 30, id(font_times), "Power %.3f kW", id(power_a6).state);
           it.printf(10, 45, id(font_times), "Total %.3f kW", id(tde_a6).state);
-
+      - id: page9
+        lambda: |-
+          it.printf(10, 0, id(font_times), "Get A7: %.3f V", id(adc_sensor_a7).state);
+          it.printf(10, 15, id(font_times), "A7: %.2f Amp", id(measured_current_a7).state);
+          it.printf(10, 30, id(font_times), "Power %.3f kW", id(power_a7).state);
+          it.printf(10, 45, id(font_times), "Total %.3f kW", id(tde_a7).state);
+          
 font:
   - file: "fonts/times.ttf"
     id: font_times
