--- a/power-manager-8c-esp32-d1-mini.yaml
+++ b/power-manager-8c-esp32-d1-mini.yaml
@@ -58,6 +58,10 @@ wifi:
 # to provision wifi credentials to the device.
 captive_portal:
 
+# Sets up the improv via serial client for Wi-Fi provisioning.
+# Handy if your device has a usb port for the user to add credentials when they first get it.
+improv_serial:
+
 ##########################################################
 
 web_server:
