--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,8 @@ jobs:
     strategy:
       matrix:
         file:
-          - power-manager-8c-esp32-d1-mini.yaml
-          - power-manager-8c-esp8266-d1-mini.yaml
+          - project-template-esp32.yaml
+          - project-template-esp8266.yaml
     steps:
       - name: Checkout source code
         uses: actions/checkout@v2
