--- a/power-manager-8c-esp8266-d1-mini.yaml
+++ b/power-manager-8c-esp8266-d1-mini.yaml
@@ -103,7 +103,7 @@ display:
           it.printf(10, 0, id(font_times), "Power Manager");
           it.printf(10, 15, id(font_times), "JLNTR2k4 2022.4");
 #          it.printf(10, 30, id(font_times), "Main: %.1f kW", id(power_total).state);    
-          it.printf(10, 45, id(font_times), "IP: %s", id(ip_now).state.c_str()); 
+#          it.printf(10, 45, id(font_times), "IP: %s", id(ip_now).state.c_str()); 
       - id: page2
         lambda: |-
           it.printf(10, 0, id(font_times), "Get A0: %.3f V", id(adc_sensor_a0).state);
